# segyviewer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.txt  setup.cfg  setup.py
applications/: CMakeLists.txt  segyviewer  segyviewer.py
cmake/: python.cmake
examples/: CMakeLists.txt  showcase_gui.py
resources/img/: CMakeLists.txt
src/: CMakeLists.txt
src/segyviewer/: CMakeLists.txt  __init__.py  layoutcanvas.py  layoutcombo.py
src/segyviewlib/: CMakeLists.txt  __init__.py  _indexcontroller.py  _plotexportsettingscontroller.py  _samplescalecontroller.py  array_spinbox.py  arrayspinbox.py  helpwindow.py  index_controller.py  layoutcanvas.py  layoutcombo.py  layoutfigure.py  sample_scale_controller.py  segyviewwidget.py  segywidgetcollection.py  settingswindow.py  slicedatasource.py  slicemodel.py  slicemodelcontroller.py  sliceview.py  sliceviewcontext.py  sliceviewwidget.py  version.py
src/segyviewlib/resources/: helppage.html
tests/: CMakeLists.txt  __init__.py  segyview_test.py  segyviewwidget_test.py  slicemodel_test.py  sliceviewcontext_test.py  test_segyview.py  test_segyviewwidget.py  test_slicemodel.py  test_sliceviewcontext.py
